--- a/Maravilhosa/style.css
+++ b/Maravilhosa/style.css
@@ -1,4 +1,4 @@
-
+/* RESET CSS */
 * {
   box-sizing: border-box;
   padding: 0;
@@ -12,18 +12,12 @@ a {
     margin: 2px;
 }
 
+ul > li {
+    list-style: none;
+}
+
+
 /* NAVBAR */
-
-.navbar{
-    background-color: #C083B9;
-    width: 100%;
-    height: 85px;
-}
-
-.navbar_logotipo {
-    text-align: center;
-    padding: 5px;
-}
 
 /* -------------------------------------------------------------------------------- */
 
